# firecracker

./: patch.diff
src/clippy-tracing/: Cargo.toml
src/cpu-template-helper/: Cargo.toml
src/firecracker/: Cargo.toml
src/firecracker/src/api_server/request/: snapshot.rs
src/firecracker/swagger/: firecracker.yaml
src/jailer/: Cargo.toml
src/log-instrument/: Cargo.toml
src/log-instrument-macros/: Cargo.toml
src/rebase-snap/: Cargo.toml
src/seccompiler/: Cargo.toml
src/snapshot-editor/: Cargo.toml
src/vmm/src/: persist.rs
src/vmm/src/vmm_config/: snapshot.rs
src/vmm/src/vstate/: memory.rs
