[package]
name = "seccompiler"
version = "1.7.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
description = "Program that compiles multi-threaded seccomp-bpf filters expressed as JSON into raw BPF programs, serializing them and outputting them to a file."
homepage = "https://firecracker-microvm.github.io/"
license = "Apache-2.0"

[lib]
bench = false

[[bin]]
name = "seccompiler-bin"
path = "src/seccompiler_bin.rs"
bench = false

[dependencies]
bincode = "3.0.0"
displaydoc = "0.2.5"
libc = "0.2.153"
log-instrument = { path = "../log-instrument", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"

utils = { path = "../utils" }

[features]
tracing = ["log-instrument", "utils/tracing"]

[lints]
workspace = true
